--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: "Home"
 {% if site.show_excerpts %}
   {% include home.html %}
 {% else %}
-  {% include archive.html title="Modules" %}
+  {% include archive.html title="ARSC 5040: Qualitative Data Tools (Spring 2022)" %}
 {% endif %}
