--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Home"
 ---
 
 {% if site.show_excerpts %}
-  {% include home.html %}
+  {% include home.md %}
 {% else %}
   {% include archive.html title="ARSC 5040: Qualitative Data Tools (Spring 2022)" %}
 {% endif %}
