--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Home"
 ---
 
-{% if site.show_posts.md %}
+{% if site.show_home.md %}
   {% include home.md %}
 {% else %}
   {% include archive.html title="ARSC 5040: Qualitative Data Tools (Spring 2022)" %}
