--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 ---
-layout: default
-title: "Home"
+layout: page
+title: "ARSC 5040 Qualitative Data Tools"
 ---
-
-{% if site.show_home.md %}
-  {% include home.md %}
-{% else %}
-  {% include archive.html title="ARSC 5040: Qualitative Data Tools (Spring 2022)" %}
-{% endif %}
