--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
 layout: page
-title: "ARSC 5040 Qualitative Data Tools"
+title: "ARSC 5040: Qualitative Data Tools"
 ---
+
+This course is offered via CARTSS' Interdisciplinary Training in the Social Sciences (ITSS) and the Center for Research Data & Digital Scholarship, at the University of Colorado, Boulder (Spring 2022).
