--- a/index.html
+++ b/index.html
@@ -4,3 +4,7 @@ title: "ARSC 5040: Qualitative Data Tools"
 ---
 
 This course is offered via CARTSS' Interdisciplinary Training in the Social Sciences (ITSS) and the Center for Research Data & Digital Scholarship, at the University of Colorado, Boulder (Spring 2022).
+
+- [Home](https://nickoal.github.io/ARSC5040/home/)
+- [Modules](https://nickoal.github.io/ARSC5040/modeules/)
+
